argocd-deploy/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
spec:
  selector:
    matchLabels:
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: back-app
        image: tomcat:9.0.75-jdk8-corretto-al2
        ports:
        - containerPort: 8080 
          protocol: TCP
